fixed battery handler
typo reported by cvjanick

--- a/zooZ-4-in-1-Sensor-ZSE40/device_type-zooZ-4-in-1-Sensor-ZSE40_v1.2
+++ b/zooZ-4-in-1-Sensor-ZSE40/device_type-zooZ-4-in-1-Sensor-ZSE40_v1.2
@@ -358,7 +358,7 @@ private checkBattery() {
 		zwave.batteryV1.batteryGet(),
 		zwave.wakeUpV1.wakeUpNoMoreInformation()
 		]
-	commands(resuest)
+	commands(request)
 }
 
 def configure() {
