sends battery events to the recently tab

--- a/zooZ-4-in-1-Sensor-ZSE40/device_type-zooZ-4-in-1-Sensor-ZSE40_v1.2
+++ b/zooZ-4-in-1-Sensor-ZSE40/device_type-zooZ-4-in-1-Sensor-ZSE40_v1.2
@@ -136,7 +136,7 @@
 			state("inactive", label:'clear', icon:"st.motion.acceleration.inactive", backgroundColor:"#00ff00")
 		}
 		valueTile("battery", "device.battery", decoration: "flat", width: 2, height: 2) {
-			state "battery", label:'${currentValue}% battery', unit:""
+			state "battery", label:'${currentValue}% battery'
 		}
 		main(["main"])
 		details(["main","humidity","illuminance","motion","acceleration","battery"])
@@ -271,8 +271,10 @@ def zwaveEvent(physicalgraph.zwave.commands.batteryv1.BatteryReport cmd) {
 		map.value = 1
 		map.descriptionText = "${device.displayName} battery is low"
 		map.isStateChange = true
+		createEvent(map)
 	} else {
 		map.value = cmd.batteryLevel
+		createEvent(map)
 	}
 	state.lastbatt = now()
 	createEvent(map)
